refactor: Format all code